--- a/front-end/login.html
+++ b/front-end/login.html
@@ -7,5 +7,13 @@
     <link rel="stylesheet" href="/front-end/style/login.css" />
     <script src="/front-end/js/login.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <form id="login-form">
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" />
+      <label for="password">Password:</label>
+      <input type="password" id="password" name="password" />
+      <input type="submit" value="Submit" />
+    </form>
+  </body>
 </html>
