--- a/front-end/register.html
+++ b/front-end/register.html
@@ -7,5 +7,31 @@
     <link rel="stylesheet" href="/front-end/style/register.css" />
     <script src="/front-end/js/register.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <form id="register-form">
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" required />
+
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required />
+
+      <label for="password">Password:</label>
+      <input type="password" id="password" name="password" required />
+
+      <label for="repeatPassword">Repeat Password:</label>
+      <input
+        type="password"
+        id="repeatPassword"
+        name="repeatPassword"
+        required
+      />
+
+      <label for="role">Role:</label>
+      <select id="role" name="role">
+        <option value="user">User</option>
+      </select>
+
+      <input type="submit" value="Register" />
+    </form>
+  </body>
 </html>
