--- a/front-end/shop.html
+++ b/front-end/shop.html
@@ -7,5 +7,7 @@
     <link rel="stylesheet" href="/front-end/style/shop.css" />
     <script src="/front-end/js/shop.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <div class="cards-container"></div>
+  </body>
 </html>
