--- a/front-end/add_item.html
+++ b/front-end/add_item.html
@@ -7,5 +7,33 @@
     <link rel="stylesheet" href="/front-end/style/add_item.css" />
     <script src="/front-end/js/add_item.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <form id="add_item">
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" required /><br /><br />
+
+      <label for="price">Price:</label>
+      <input type="number" id="price" name="price" required /><br /><br />
+
+      <label for="description">Description:</label>
+      <textarea id="description" name="description" required></textarea
+      ><br /><br />
+
+      <label for="image">Image:</label>
+      <input
+        type="text"
+        id="image"
+        name="image"
+        
+        required
+      />
+
+      <label for="item_type_id">Item Type:</label>
+      <select id="item_type_id" name="item_type_id" required>
+        <option value="1">Type 1</option>
+        
+
+      <input type="submit" value="Submit" />
+    </form>
+  </body>
 </html>
