--- a/front-end/orders.html
+++ b/front-end/orders.html
@@ -8,6 +8,15 @@
     <script src="/front-end/js/orders.js" defer></script>
   </head>
   <body>
+    <nav>
+      <ul>
+        <li><a href="/front-end/add_item.html">Add item</a></li>
+        <li><a href="/front-end/login.html">Login</a></li>
+        <li><a href="/front-end/orders.html">Orders</a></li>
+        <li><a href="/front-end/register.html">Register</a></li>
+        <li><a href="/front-end/shop.html">Shop</a></li>
+      </ul>
+    </nav>
     <label for="ordered_by">Ordered by:</label>
     <select id="ordered_by" name="ordered_by"></select>
 
