--- a/front-end/shop.html
+++ b/front-end/shop.html
@@ -8,6 +8,15 @@
     <script src="/front-end/js/shop.js" defer></script>
   </head>
   <body>
+    <nav>
+      <ul>
+        <li><a href="/front-end/add_item.html">Add item</a></li>
+        <li><a href="/front-end/login.html">Login</a></li>
+        <li><a href="/front-end/orders.html">Orders</a></li>
+        <li><a href="/front-end/register.html">Register</a></li>
+        <li><a href="/front-end/shop.html">Shop</a></li>
+      </ul>
+    </nav>
     <div class="cards-container"></div>
   </body>
 </html>
