--- a/front-end/login.html
+++ b/front-end/login.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav>
-      <ul>
+      <ul id="navbar">
         <li><a href="/front-end/add_item.html">Add item</a></li>
         <li><a href="/front-end/login.html">Login</a></li>
         <li><a href="/front-end/orders.html">Orders</a></li>
