--- a/front-end/add_item.html
+++ b/front-end/add_item.html
@@ -9,12 +9,12 @@
   </head>
   <body>
   <nav>
-    <ul>
-      <li><a href="/front-end/add_item.html">Add item</a></li>
-      <li><a href="/front-end/login.html">Login</a></li>
-      <li><a href="/front-end/orders.html">Orders</a></li>
-      <li><a href="/front-end/register.html">Register</a></li>
-      <li><a href="/front-end/shop.html">Shop</a></li>
+    <ul id="navbar">
+      <li class="logged"><a href="/front-end/add_item.html">Add item</a></li>
+      <li class="not-logged"><a href="/front-end/login.html">Login</a></li>
+      <li class="logged"><a href="/front-end/orders.html">Orders</a></li>
+      <li class=" not-logged"><a href="/front-end/register.html">Register</a></li>
+      <li class="logged"><a href="/front-end/shop.html">Shop</a></li>
     </ul>
   </nav>
     <form id="add_item">
